# agentrix

./: .gitignore  .nycrc  .prettierignore  AGENTS.md  Cargo.toml  README.md  agents.md  api.md  bunfig.toml  eslint.config.mjs  package-lock.json  package.json  prettier.config.cjs  test  tsconfig.build.json  tsconfig.json  ui.sample.html
.plans/: 20251101_201706-feature_async-worktree-progress-tracker.md  20251102_132401-feature_repo-dashboard-display-open-issues-plan.md  20251102_202054-feature_persist-task-metadata.md  20251102_225500-enhancement_idle-session-highlights.md  20251103_102320-enhancement_resizable-desktop-git-sidebar.md  20251103_110342-enhancement_repository-dashboard-tablet-grid.md  20251103_115754-enhancement_expand-open-issues-modal-height.md  20251103_120334-fix_branch-toolbar-truncation.md  20251105_170234-feature_worktree-idle-browser-notification.md  20251105_170329-fix_auto-start-agent-on-workspace-create.md  20251105_200359-chore_write-backend-api-docs.md  20251106_091611-enhancement_top-align-left-sidebar-toolbar.md  20251106_155002-feature_ports-sidebar-ngrok-tunnel.md  20251107_055529-feature_ports-menu-dropdown.md  20251107_055844-chore_rewrite-agents-guide.md  20251107_094034-feature_tabbed-terminal-sessions.md  20251110_200838-feature_ios-native-plan.md  20251113_212228-fix_validate-repo-paths.md  20251113_212707-enhancement_use-repo-cache-for-sse.md  20251113_213031-fix_align-repo-list-sendjson.md  20251113_222944-fix_cross-platform-port-listing-fallback.md  20251113_223137-fix_useeventstream-typed-handlers.md
coverage/: lcov.info
docs/: codex-sdk-mobile-parity.md  codex-sdk.md  sessions.md
scripts/: build-macos-app.sh  ensure-ui-deps.js
src/: cli.js  cli.rs  cli.ts  error.rs  lib.rs  main.rs  server.js
tests/: cli.rs  server.rs
ui/: index.html  (+9 more)
(+756 files in other folders)
